src/styles.css
#editor,
#viewer {
  height: 100%;
}

body {
  margin: 0;
  font-family: Arial, sans-serif;
}

.viewer {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.viewer {
  font-family: system-ui, 'Segoe UI', Roboto, sans-serif;
}

.editor-box,
.viewer-box {
  border-radius: 6px;
  border: 1px solid #e0e0e0;
  overflow: hidden;
}

.editor,
ngx-json-viewer {
  height: calc(100vh - 210px);
  display: block;
}

img {
  user-select: none;
}

.json-box {
  max-height: 400px;
  overflow-y: auto;
}

::ng-deep ngx-json-viewer {
  background-color: #eef4ff !important;
}

@media screen and (max-width: 767px) {
  .button-text {
    display: none;
  }
  .bottom-margin {
    margin-bottom: 12px;
  }
}

@media screen and (min-width: 768px) {
  .button-text {
    display: inline;
  }
  .bottom-margin {
    margin-bottom: 0;
  }
}

